--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "helmet": "^1.1.0",
     "jade": "~1.11.0",
     "jquery": "^3.2.1",
+    "moment-timezone": "^0.5.0",
     "morgan": "~1.6.1",
     "node-uuid": "^1.4.7",
     "passport": "^0.3.2",
