--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "express-session": "^1.13.0",
-    "helmet": "^1.1.0",
+    "helmet": "^1.3.0",
     "jade": "~1.11.0",
     "jquery": "^3.3.1",
+    "moment-timezone": "^0.5.0",
     "morgan": "~1.6.1",
     "node-uuid": "^1.4.7",
     "passport": "^0.3.2",
