--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "express": "~4.15.5",
     "express-session": "^1.13.0",
     "helmet": "^1.1.0",
-    "pug": "^2.0.0-rc.4",
     "jquery": "^3.3.1",
+    "moment-timezone": "^0.5.0",
     "morgan": "~1.9.0",
     "node-uuid": "^1.4.7",
     "passport": "^0.3.2",
@@ -23,6 +23,7 @@
     "pg": "^7.4.1",
     "pg-hstore": "^2.3.2",
     "popper.js": "^1.14.0",
+    "pug": "^2.0.0-rc.4",
     "sequelize": "^4.33.4",
     "serve-favicon": "~2.4.5"
   },
