--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "helmet": "^3.8.2",
     "http-errors": "~1.6.2",
     "jquery": "^3.3.1",
+    "moment-timezone": "^0.5.0",
     "morgan": "~1.9.0",
     "node-uuid": "^1.4.7",
     "passport": "^0.3.2",
