--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "express-session": "^1.15.6",
+    "feature-policy": "^0.1.0",
     "helmet": "^3.8.2",
     "http-errors": "~1.6.2",
     "jquery": "^3.3.1",
+    "moment-timezone": "^0.5.0",
     "morgan": "~1.9.0",
     "node-uuid": "^1.4.7",
     "passport": "^0.3.2",
